Add playlist reactions

--- a/BAPSPresenter2/BAPSPresenter.csproj
+++ b/BAPSPresenter2/BAPSPresenter.csproj
@@ -63,6 +63,9 @@
     <Compile Include="Main.Reactions.Config.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Main.Reactions.Playlist.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="LoginDialog.resx">
