--- a/BAPSPresenter2/BAPSPresenter.csproj
+++ b/BAPSPresenter2/BAPSPresenter.csproj
@@ -63,10 +63,16 @@
     <Compile Include="Main.Reactions.Config.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Main.Reactions.Database.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Main.Reactions.Playback.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Main.Reactions.Playlist.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Main.Reactions.System.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Program.cs" />
