--- a/BAPSPresenter2/BAPSPresenter.csproj
+++ b/BAPSPresenter2/BAPSPresenter.csproj
@@ -67,6 +67,9 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="Main.Events.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Main.Reactions.Config.cs">
       <SubType>Form</SubType>
     </Compile>
