--- a/BAPSFormControls/BAPSFormControls.csproj
+++ b/BAPSFormControls/BAPSFormControls.csproj
@@ -85,8 +85,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BAPSButton.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="BAPSButton.Designer.cs">
+      <DependentUpon>BAPSButton.cs</DependentUpon>
+    </Compile>
     <Compile Include="BAPSLabel.cs">
-      <SubType>Component</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="BAPSLabel.Designer.cs">
       <DependentUpon>BAPSLabel.cs</DependentUpon>
