--- a/BAPSPresenter2/BAPSPresenter.csproj
+++ b/BAPSPresenter2/BAPSPresenter.csproj
@@ -88,6 +88,12 @@
     <Compile Include="ChangeType.cs" />
     <Compile Include="Command.cs" />
     <Compile Include="ConfigOptions.cs" />
+    <Compile Include="Dialogs\Config.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\Config.Designer.cs">
+      <DependentUpon>Config.cs</DependentUpon>
+    </Compile>
     <Compile Include="KeyShortcuts.cs" />
     <Compile Include="Dialogs\LocalConfigDialog.cs">
       <SubType>Form</SubType>
