--- a/BAPSFormControls/BAPSFormControls.csproj
+++ b/BAPSFormControls/BAPSFormControls.csproj
@@ -98,6 +98,13 @@
       <DependentUpon>BAPSLabel.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrackTime.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="TrackTime.Designer.cs">
+      <DependentUpon>TrackTime.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Utils.cs" />
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
