--- a/BAPSPresenter2/BAPSPresenter.csproj
+++ b/BAPSPresenter2/BAPSPresenter.csproj
@@ -89,7 +89,6 @@
     <Compile Include="BAPSDirectory.Designer.cs">
       <DependentUpon>BAPSDirectory.cs</DependentUpon>
     </Compile>
-    <Compile Include="Command.cs" />
     <Compile Include="ConfigOptions.cs" />
     <Compile Include="Dialogs\Config.cs">
       <SubType>Form</SubType>
@@ -145,7 +144,6 @@
       <DependentUpon>TrackList.cs</DependentUpon>
     </Compile>
     <Compile Include="Utils.cs" />
-    <Compile Include="PositionRequestChange.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Dialogs\TextDialog.cs">
@@ -203,6 +201,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BAPSCommon\BAPSCommon.csproj">
+      <Project>{701B4F5C-600A-4EB2-82AE-BA11EA8160A7}</Project>
+      <Name>BAPSCommon</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BAPSFormControls\BAPSFormControls.csproj">
       <Project>{4c3d1722-7b93-4081-8d61-572f8f088ced}</Project>
       <Name>BAPSFormControls</Name>
