--- a/BAPSFormControls/BAPSFormControls.csproj
+++ b/BAPSFormControls/BAPSFormControls.csproj
@@ -115,6 +115,11 @@
       <Name>BAPSCommon</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="BAPSLabel.resx">
+      <DependentUpon>BAPSLabel.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
