--- a/BAPSPresenterNG/BAPSPresenterNG.csproj
+++ b/BAPSPresenterNG/BAPSPresenterNG.csproj
@@ -91,6 +91,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MsecToPositionStringConverter.cs" />
     <Compile Include="PositionDisplay.xaml.cs">
       <DependentUpon>PositionDisplay.xaml</DependentUpon>
     </Compile>
