--- a/BAPSPresenterNG/BAPSPresenterNG.csproj
+++ b/BAPSPresenterNG/BAPSPresenterNG.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,6 +34,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Resources\Main.ico</ApplicationIcon>
@@ -81,6 +83,7 @@
       <DependentUpon>Channel.xaml</DependentUpon>
     </Compile>
     <Compile Include="ChannelIDConverter.cs" />
+    <Compile Include="ReceiverMessengerAdapter.cs" />
     <Compile Include="ViewModel\ChannelViewModel.cs" />
     <Compile Include="EntryTypeToIconConverter.cs" />
     <Compile Include="Login.xaml.cs">
