--- a/BAPSPresenter2/BAPSPresenter.csproj
+++ b/BAPSPresenter2/BAPSPresenter.csproj
@@ -146,7 +146,9 @@
       <DependentUpon>Main.cs</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TrackList.cs" />
+    <Compile Include="TrackList.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="TrackList.Designer.cs">
       <DependentUpon>TrackList.cs</DependentUpon>
     </Compile>
