--- a/BAPSPresenterNG/BAPSPresenterNG.csproj
+++ b/BAPSPresenterNG/BAPSPresenterNG.csproj
@@ -149,13 +149,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BAPSClientWindows\BAPSClientWindows.csproj">
+      <Project>{f429ef69-9102-42dc-ad98-9234b0dccc35}</Project>
+      <Name>BAPSClientWindows</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BAPSCommon\BAPSCommon.csproj">
       <Project>{701b4f5c-600a-4eb2-82ae-ba11ea8160a7}</Project>
       <Name>BAPSCommon</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\BAPSPresenter\BAPSPresenter.vcxproj">
-      <Project>{46fd9397-dd3b-456a-9d95-504d60f6a9b5}</Project>
-      <Name>BAPSPresenterLegacy</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
