--- a/BAPSPresenterNG/BAPSPresenterNG.csproj
+++ b/BAPSPresenterNG/BAPSPresenterNG.csproj
@@ -79,6 +79,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Directory.xaml.cs">
+      <DependentUpon>Directory.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Channel.xaml.cs">
       <DependentUpon>Channel.xaml</DependentUpon>
     </Compile>
@@ -89,8 +92,13 @@
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModel\DirectoryViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
+    <Page Include="Directory.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Channel.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
