Massive namespace overhaul etc
Aaaargh, this breaks so much.  Forgive me.

--- a/BAPSClientCommonTests/BAPSClientCommonTests.csproj
+++ b/BAPSClientCommonTests/BAPSClientCommonTests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BAPSCommon\BAPSCommon.csproj" />
+    <ProjectReference Include="..\BAPSCommon\BAPSClientCommon.csproj" />
   </ItemGroup>
 
 </Project>
