NG: Finally decouple channel from receiver
We now use the message bus for every implemented server update, and are making progress towards using it for the other direction too.

While I was here, I also cleaned up the track events too, with the knock-on effect that duration is now stored in the tracks.

--- a/BAPSPresenterNG/BAPSPresenterNG.csproj
+++ b/BAPSPresenterNG/BAPSPresenterNG.csproj
@@ -82,6 +82,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ChannelControllerMessengerAdapter.cs" />
     <Compile Include="Controls\Directory.xaml.cs">
       <DependentUpon>Directory.xaml</DependentUpon>
     </Compile>
