Add initial attempt at loaded-item highlighting.
This is super clunky at the moment, but I'm not sure how to make it better.

--- a/BAPSPresenterNG/BAPSPresenterNG.csproj
+++ b/BAPSPresenterNG/BAPSPresenterNG.csproj
@@ -102,6 +102,7 @@
     </Compile>
     <Compile Include="ViewModel\DirectoryViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="ViewModel\TrackViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Page Include="Controls\Directory.xaml">
       <Generator>MSBuild:Compile</Generator>
