--- a/BAPSPresenterNG/BAPSPresenterNG.csproj
+++ b/BAPSPresenterNG/BAPSPresenterNG.csproj
@@ -83,7 +83,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="ChannelControllerMessengerAdapter.cs" />
+    <Compile Include="ConfigMessengerAdapter.cs" />
     <Compile Include="Controls\Directory.xaml.cs">
       <DependentUpon>Directory.xaml</DependentUpon>
     </Compile>
@@ -100,6 +100,7 @@
     <Compile Include="Converters\ChannelIDConverter.cs" />
     <Compile Include="Controls\Header.cs" />
     <Compile Include="Converters\PositionScaleConverter.cs" />
+    <Compile Include="EventMessengerAdapterBase.cs" />
     <Compile Include="ReceiverMessengerAdapter.cs" />
     <Compile Include="Controls\TransportButton.xaml.cs">
       <DependentUpon>TransportButton.xaml</DependentUpon>
