--- a/BAPSCommon/BAPSClientCommon.csproj
+++ b/BAPSCommon/BAPSClientCommon.csproj
@@ -5,4 +5,8 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2018.3.0" />
+  </ItemGroup>
+
 </Project>
