--- a/BAPSPresenterNG/packages.config
+++ b/BAPSPresenterNG/packages.config
@@ -3,6 +3,7 @@
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net472" />
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net472" />
   <package id="gong-wpf-dragdrop" version="1.1.0" targetFramework="net472" />
+  <package id="JetBrains.Annotations" version="2018.3.0" targetFramework="net472" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net472" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net472" />
 </packages>
