--- a/BAPSPresenterNG/packages.config
+++ b/BAPSPresenterNG/packages.config
@@ -6,4 +6,8 @@
   <package id="JetBrains.Annotations" version="2018.3.0" targetFramework="net472" />
   <package id="MvvmLight" version="5.4.1.1" targetFramework="net472" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net472" />
+  <package id="System.Reactive" version="4.1.2" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net472" />
 </packages>
